--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,18 @@
 cmake_minimum_required(VERSION 3.5)
 project(TinyWebServer)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 11)
 
 # 添加头文件
-include_directories(./include/log ./include/pool ./include/http)
+include_directories(./include/log ./include/pool ./include/http ./include/server)
 
 # 添加各个模块的源文件
 aux_source_directory(./src/log DIR_SRCS)
 aux_source_directory(./src/pool POOL_SRCS)
 aux_source_directory(./src/http HTTP_SRCS)
+aux_source_directory(./src/server SERVER_SRCS)
 
-add_executable(TinyWebServer main.cpp ${DIR_SRCS} ${POOL_SRCS} ${HTTP_SRCS})
+add_executable(TinyWebServer main.cpp ${DIR_SRCS} ${POOL_SRCS} ${HTTP_SRCS} ${SERVER_SRCS})
+
+# 添加链接库
+target_link_libraries(TinyWebServer pthread) # 添加pthread库
